--- a/index.html
+++ b/index.html
@@ -2,23 +2,21 @@
 <html>
 
 <head>
+	<title>FKEM Content Manager</title>
+	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 	<script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
 	<script src="node_modules/typescript/lib/typescript.js"></script>
+	<script src="node_modules/jquery/dist/jquery.js"></script>
+	<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="node_modules/systemjs/dist/system.src.js"></script>
-	<script src="node_modules/rxjs/bundles/Rx.js"></script>
+	<script src="node_modules/rxjs/bundles/Rx.js"></script> 
 	<script src="node_modules/angular2/bundles/angular2.dev.js"></script>
-	<script>
-		System.config({
-			transpiler: 'typescript',
-			typescriptOptions: { emitDecoratorMetadata: true },
-			packages: {app: {defaultExtension: 'ts'}}
-		});
-	</script>
+	<script src="config.js"></script>
 </head>
 
 <body>
 	<app>Loading...</app>
-	<script>System.import('app/app');</script>
+	<script>System.import('app');</script>
 </body>
 
 </html>
