--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<base href="/">
 	<title>FKEM Content Manager</title>
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 	<script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
@@ -12,6 +13,7 @@
 	<script src="node_modules/rxjs/bundles/Rx.js"></script> 
 	<script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 	<script src="https://code.angularjs.org/2.0.0-beta.0/http.dev.js"></script>
+	<script src="https://code.angularjs.org/2.0.0-beta.0/router.dev.js"></script>
 	<script src="config.js"></script>
 </head>
 
